--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack",
+    "watch": "npx webpack --watch",
+    "start": "npx webpack-dev-server --open",
     "server": "ts-node ./Server/index.ts"
   },
   "author": "",
@@ -28,6 +30,7 @@
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^2.0.2",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
