--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-root-plugin": "^0.10.0",
     "nodemon": "^2.0.2",
+    "style-loader": "^1.1.3",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
