--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pdf": "^4.1.0",
     "source-map-loader": "^0.2.4",
     "ts-node": "^8.5.4"
   },
